JS-1057 Deprecated methods