@@ -1016,7 +1016,7 @@ class TrialServiceImplTest {
             JurorDetailRequestDto detailRequestDto = new JurorDetailRequestDto();
             detailRequestDto.setFirstName("FNAME");
             detailRequestDto.setLastName("LNAME");
-            detailRequestDto.setJurorNumber(String.format("1111111%02d", i + 1));
+            detailRequestDto.setJurorNumber("1111111%02d".formatted(i + 1));
             detailRequestDto.setResult(PanelResult.JUROR);
             jurorDetailRequestDtos.add(detailRequestDto);
         }
@@ -1031,7 +1031,7 @@ class TrialServiceImplTest {
         for (int i = 0;
              i < totalMembers;
              i++) {
-            Panel temp = createSinglePanelData(panelResult, trialNumber, status, String.format(jurorNumber, i + 1));
+            Panel temp = createSinglePanelData(panelResult, trialNumber, status, jurorNumber.formatted(i + 1));
             temp.getJuror().setJurorNumber(jurorNumber.formatted(i + 1));
             temp.setDateSelected(now().atStartOfDay());
             temp.setResult(panelResult);
